--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="nl">
- <head>
+<!DOCTYPE html><html lang="nl"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AutoDrive Nederland - Premium Autoservices &amp; Expertise</title>
@@ -22,7 +20,7 @@
      <a class="navbar-brand c-logo" href="/"> 
       <div class="ratio ratio-21x9" style="width: var(--logo-w, 150px); height: var(--logo-h, 40px);">
        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 40" class="c-logo__img">
-        <rect width="150" height="40" rx="4" fill="var(--color-primary, #2563eb)" /> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
+        <rect width="150" height="40" rx="4" fill="var(--color-primary, #2563eb)"></rect> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
        </svg>
       </div> 
      </a>
@@ -43,7 +41,7 @@
    <!-- Hero Section with Video Background -->
    <section class="l-hero position-relative overflow-hidden py-5" style="scroll-margin-top: var(--nav-h);">
     <div class="position-absolute top-0 start-0 w-100 h-100">
-     <video class="w-100 h-100" style="object-fit: cover;" autoplay muted loop playsinline>
+     <video class="w-100 h-100" style="object-fit: cover;" autoplay="" muted="" loop="" playsinline="">
       <source src="https://assets.mixkit.co/videos/preview/mixkit-cars-driving-on-a-highway-at-night-2020-large.mp4" type="video/mp4">
      </video>
      <div class="position-absolute top-0 start-0 w-100 h-100" style="background: rgba(31, 41, 55, 0.7);"></div>
@@ -73,7 +71,7 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
        <div class="c-card card h-100 d-flex flex-column border-0 shadow-sm">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1487754180451-c456f719a1fc?w=400&amp;h=300&amp;fit=crop&amp;auto=format" alt="Professioneel autoonderhoud, garage service" class="img-fluid" style="object-fit: cover;" loading="lazy" width="400" height="300">
+         <img src="img/7956.jpg" alt="Professioneel autoonderhoud, garage service" class="img-fluid" style="object-fit: cover;" loading="lazy" width="400" height="300">
         </div>
         <div class="card-body d-flex flex-column">
          <h3 class="card-title h5 fw-bold">Onderhoud &amp; Inspectie</h3>
@@ -85,7 +83,7 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
        <div class="c-card card h-100 d-flex flex-column border-0 shadow-sm">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?w=400&amp;h=300&amp;fit=crop&amp;auto=format" alt="Motor reparatie, professionele diagnose" class="img-fluid" style="object-fit: cover;" loading="lazy" width="400" height="300">
+         <img src="img/4420917.jpg" alt="Motor reparatie, professionele diagnose" class="img-fluid" style="object-fit: cover;" loading="lazy" width="400" height="300">
         </div>
         <div class="card-body d-flex flex-column">
          <h3 class="card-title h5 fw-bold">Reparaties &amp; Diagnose</h3>
@@ -97,7 +95,7 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
        <div class="c-card card h-100 d-flex flex-column border-0 shadow-sm">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1619642751034-765dfdf7c58e?w=400&amp;h=300&amp;fit=crop&amp;auto=format" alt="APK keuring, voertuig certificering" class="img-fluid" style="object-fit: cover;" loading="lazy" width="400" height="300">
+         <img src="img/21695.jpg" alt="APK keuring, voertuig certificering" class="img-fluid" style="object-fit: cover;" loading="lazy" width="400" height="300">
         </div>
         <div class="card-body d-flex flex-column">
          <h3 class="card-title h5 fw-bold">APK &amp; Certificering</h3>
@@ -120,7 +118,7 @@
          <div class="d-flex align-items-start">
           <div class="ratio ratio-1x1 me-3" style="width: 40px; height: 40px;">
            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="text-primary" viewBox="0 0 16 16">
-            <path d="M10.067.87a2.89 2.89 0 0 0-4.134 0l-.622.638-.89-.011a2.89 2.89 0 0 0-2.924 2.924l.01.89-.636.622a2.89 2.89 0 0 0 0 4.134l.637.622-.011.89a2.89 2.89 0 0 0 2.924 2.924l.89-.01.622.636a2.89 2.89 0 0 0 4.134 0l.622-.637.89.011a2.89 2.89 0 0 0 2.924-2.924l-.01-.89.636-.622a2.89 2.89 0 0 0 0-4.134l-.637-.622.011-.89a2.89 2.89 0 0 0-2.924-2.924l-.89.01L10.067.87zM6.464 13.676a.5.5 0 0 1-.707 0L3.879 11.8a.5.5 0 0 1 .707-.707l1.525 1.525 4.085-4.085a.5.5 0 1 1 .708.707l-4.44 4.436z" />
+            <path d="M10.067.87a2.89 2.89 0 0 0-4.134 0l-.622.638-.89-.011a2.89 2.89 0 0 0-2.924 2.924l.01.89-.636.622a2.89 2.89 0 0 0 0 4.134l.637.622-.011.89a2.89 2.89 0 0 0 2.924 2.924l.89-.01.622.636a2.89 2.89 0 0 0 4.134 0l.622-.637.89.011a2.89 2.89 0 0 0 2.924-2.924l-.01-.89.636-.622a2.89 2.89 0 0 0 0-4.134l-.637-.622.011-.89a2.89 2.89 0 0 0-2.924-2.924l-.89.01L10.067.87zM6.464 13.676a.5.5 0 0 1-.707 0L3.879 11.8a.5.5 0 0 1 .707-.707l1.525 1.525 4.085-4.085a.5.5 0 1 1 .708.707l-4.44 4.436z"></path>
            </svg>
           </div>
           <div>
@@ -133,7 +131,7 @@
          <div class="d-flex align-items-start">
           <div class="ratio ratio-1x1 me-3" style="width: 40px; height: 40px;">
            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="text-primary" viewBox="0 0 16 16">
-            <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zM4.285 9.567a.5.5 0 0 1 .683.183A3.498 3.498 0 0 0 8 11.5a3.498 3.498 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.498 4.498 0 0 1 8 12.5a4.498 4.498 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683zM10 8c-.552 0-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5S10.552 8 10 8z" />
+            <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zM4.285 9.567a.5.5 0 0 1 .683.183A3.498 3.498 0 0 0 8 11.5a3.498 3.498 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.498 4.498 0 0 1 8 12.5a4.498 4.498 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683zM10 8c-.552 0-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5S10.552 8 10 8z"></path>
            </svg>
           </div>
           <div>
@@ -146,7 +144,7 @@
          <div class="d-flex align-items-start">
           <div class="ratio ratio-1x1 me-3" style="width: 40px; height: 40px;">
            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="text-primary" viewBox="0 0 16 16">
-            <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z" /> <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z" />
+            <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"></path> <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"></path>
            </svg>
           </div>
           <div>
@@ -159,7 +157,7 @@
          <div class="d-flex align-items-start">
           <div class="ratio ratio-1x1 me-3" style="width: 40px; height: 40px;">
            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="text-primary" viewBox="0 0 16 16">
-            <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" /> <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+            <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"></path> <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path>
            </svg>
           </div>
           <div>
@@ -172,7 +170,7 @@
       </div>
       <div class="col-lg-6 mt-5 mt-lg-0" data-aos="fade-left">
        <div class="ratio ratio-16x9">
-        <img src="https://images.unsplash.com/photo-1558618047-3c8c76ca7d13?w=600&amp;h=400&amp;fit=crop&amp;auto=format" alt="AutoDrive Nederland garage interieur, professionele werkplaats" class="img-fluid rounded shadow" style="object-fit: cover;" loading="lazy" width="600" height="400">
+        <img src="img/6542.jpg" alt="AutoDrive Nederland garage interieur, professionele werkplaats" class="img-fluid rounded shadow" style="object-fit: cover;" loading="lazy" width="600" height="400">
        </div>
       </div>
      </div>
@@ -193,19 +191,19 @@
         <div class="row g-3">
          <div class="col-md-6">
           <div class="c-form__group">
-           <label for="firstName" class="c-form__label form-label">Voornaam *</label> <input type="text" class="c-form__input form-control" id="firstName" name="firstName" required>
+           <label for="firstName" class="c-form__label form-label">Voornaam *</label> <input type="text" class="c-form__input form-control" id="firstName" name="firstName" required="">
            <div class="c-form__error invalid-feedback">Voornaam is verplicht</div>
           </div>
          </div>
          <div class="col-md-6">
           <div class="c-form__group">
-           <label for="lastName" class="c-form__label form-label">Achternaam *</label> <input type="text" class="c-form__input form-control" id="lastName" name="lastName" required>
+           <label for="lastName" class="c-form__label form-label">Achternaam *</label> <input type="text" class="c-form__input form-control" id="lastName" name="lastName" required="">
            <div class="c-form__error invalid-feedback">Achternaam is verplicht</div>
           </div>
          </div>
          <div class="col-md-6">
           <div class="c-form__group">
-           <label for="email" class="c-form__label form-label">E-mailadres *</label> <input type="email" class="c-form__input form-control" id="email" name="email" required>
+           <label for="email" class="c-form__label form-label">E-mailadres *</label> <input type="email" class="c-form__input form-control" id="email" name="email" required="">
            <div class="c-form__error invalid-feedback">Een geldig e-mailadres is verplicht</div>
           </div>
          </div>
@@ -221,13 +219,13 @@
          </div>
          <div class="col-12">
           <div class="c-form__group">
-           <label for="message" class="c-form__label form-label">Bericht *</label> <textarea class="c-form__input form-control" id="message" name="message" rows="5" required placeholder="Beschrijf uw vraag of gewenste service..."></textarea>
+           <label for="message" class="c-form__label form-label">Bericht *</label> <textarea class="c-form__input form-control" id="message" name="message" rows="5" required="" placeholder="Beschrijf uw vraag of gewenste service..."></textarea>
            <div class="c-form__error invalid-feedback">Bericht is verplicht</div>
           </div>
          </div>
          <div class="col-12">
           <div class="c-form__checkbox form-check">
-           <input class="form-check-input" type="checkbox" id="privacy" name="privacy" required> <label class="form-check-label" for="privacy"> Ik ga akkoord met de <a href="privacy.html" class="text-primary">privacyverklaring</a> * </label>
+           <input class="form-check-input" type="checkbox" id="privacy" name="privacy" required=""> <label class="form-check-label" for="privacy"> Ik ga akkoord met de <a href="privacy.html" class="text-primary">privacyverklaring</a> * </label>
            <div class="c-form__error invalid-feedback">U moet akkoord gaan met de privacyverklaring</div>
           </div>
          </div>
@@ -250,7 +248,7 @@
       </div>
       <div class="col-lg-4" data-aos="fade-left" data-aos-delay="200">
        <form class="d-flex gap-2">
-        <input type="email" class="form-control" placeholder="Uw e-mailadres" required>
+        <input type="email" class="form-control" placeholder="Uw e-mailadres" required="">
         <button type="submit" class="c-button c-button--secondary text-nowrap">Aanmelden</button>
        </form>
       </div>
@@ -289,7 +287,7 @@
       <div class="c-logo mb-3">
        <div class="ratio ratio-21x9" style="width: var(--logo-w, 150px); height: var(--logo-h, 40px);">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 40" class="c-logo__img">
-         <rect width="150" height="40" rx="4" fill="var(--color-accent, #f59e0b)" /> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
+         <rect width="150" height="40" rx="4" fill="var(--color-accent, #f59e0b)"></rect> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
         </svg>
        </div>
       </div>
@@ -297,11 +295,11 @@
       <div class="d-flex gap-3">
        <a href="#" class="text-white" aria-label="Facebook"> 
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
-         <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+         <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
         </svg> 
        </a> <a href="#" class="text-white" aria-label="LinkedIn"> 
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
-         <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+         <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"></path>
         </svg> 
        </a>
       </div>
@@ -346,6 +344,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
