--- a/about.html
+++ b/about.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="nl">
- <head>
+<!DOCTYPE html><html lang="nl"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Over Ons - AutoFocus NL | Professionele Autoservices</title>
@@ -27,7 +25,7 @@
      <a class="navbar-brand c-logo" href="/"> 
       <div class="ratio ratio-21x9" style="width: var(--logo-w, 150px); height: var(--logo-h, 40px);">
        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 40" class="c-logo__img">
-        <rect width="150" height="40" rx="4" fill="var(--color-primary, #2563eb)" /> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
+        <rect width="150" height="40" rx="4" fill="var(--color-primary, #2563eb)"></rect> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
        </svg>
       </div> 
      </a>
@@ -67,7 +65,7 @@
       </div>
       <div class="col-lg-6" data-aos="fade-left">
        <div class="ratio ratio-4x3">
-        <img src="https://images.unsplash.com/photo-1486754735734-325b5831c3ad?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=800&amp;h=600" alt="AutoFocus NL werkplaats met moderne apparatuur" class="img-fluid rounded shadow" width="800" height="600" loading="lazy">
+        <img src="img/21834135.jpg" alt="AutoFocus NL werkplaats met moderne apparatuur" class="img-fluid rounded shadow" width="800" height="600" loading="lazy">
        </div>
       </div>
      </div>
@@ -88,7 +86,7 @@
         <div class="flex-shrink-0 me-3">
          <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center" style="width: 60px; height: 60px;">
           <svg width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
-           <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" /> <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.061L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z" />
+           <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path> <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.061L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"></path>
           </svg>
          </div>
         </div>
@@ -103,7 +101,7 @@
         <div class="flex-shrink-0 me-3">
          <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center" style="width: 60px; height: 60px;">
           <svg width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
-           <path d="M2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2zM1 4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V4z" /> <path d="M6.5 5.5A1.5 1.5 0 0 0 5 7v2a1.5 1.5 0 0 0 3 0V7a1.5 1.5 0 0 0-1.5-1.5z" />
+           <path d="M2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2zM1 4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V4z"></path> <path d="M6.5 5.5A1.5 1.5 0 0 0 5 7v2a1.5 1.5 0 0 0 3 0V7a1.5 1.5 0 0 0-1.5-1.5z"></path>
           </svg>
          </div>
         </div>
@@ -118,7 +116,7 @@
         <div class="flex-shrink-0 me-3">
          <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center" style="width: 60px; height: 60px;">
           <svg width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
-           <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
+           <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"></path>
           </svg>
          </div>
         </div>
@@ -133,7 +131,7 @@
         <div class="flex-shrink-0 me-3">
          <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center" style="width: 60px; height: 60px;">
           <svg width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
-           <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM2 2a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H2z" /> <path d="M2.5 4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H3a.5.5 0 0 1-.5-.5V4z" />
+           <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM2 2a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H2z"></path> <path d="M2.5 4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H3a.5.5 0 0 1-.5-.5V4z"></path>
           </svg>
          </div>
         </div>
@@ -159,7 +157,7 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
        <div class="c-card card h-100 d-flex flex-column border-0 shadow">
         <div class="ratio ratio-1x1">
-         <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=400&amp;h=400" alt="Jan van der Berg, Hoofdmonteur" class="card-img-top" width="400" height="400" loading="lazy" style="object-fit: cover; border-radius: 50%;">
+         <img src="img/3038.jpg" alt="Jan van der Berg, Hoofdmonteur" class="card-img-top" width="400" height="400" loading="lazy" style="object-fit: cover; border-radius: 50%;">
         </div>
         <div class="card-body text-center d-flex flex-column">
          <h3 class="h4 mb-2">Jan van der Berg</h3>
@@ -174,7 +172,7 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
        <div class="c-card card h-100 d-flex flex-column border-0 shadow">
         <div class="ratio ratio-1x1">
-         <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=400&amp;h=400" alt="Pieter Janssen, Transmissie Specialist" class="card-img-top" width="400" height="400" loading="lazy" style="object-fit: cover; border-radius: 50%;">
+         <img src="img/530.jpg" alt="Pieter Janssen, Transmissie Specialist" class="card-img-top" width="400" height="400" loading="lazy" style="object-fit: cover; border-radius: 50%;">
         </div>
         <div class="card-body text-center d-flex flex-column">
          <h3 class="h4 mb-2">Pieter Janssen</h3>
@@ -189,7 +187,7 @@
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
        <div class="c-card card h-100 d-flex flex-column border-0 shadow">
         <div class="ratio ratio-1x1">
-         <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=400&amp;h=400" alt="Lisa de Vries, Klantenservice Manager" class="card-img-top" width="400" height="400" loading="lazy" style="object-fit: cover; border-radius: 50%;">
+         <img src="img/11950.jpg" alt="Lisa de Vries, Klantenservice Manager" class="card-img-top" width="400" height="400" loading="lazy" style="object-fit: cover; border-radius: 50%;">
         </div>
         <div class="card-body text-center d-flex flex-column">
          <h3 class="h4 mb-2">Lisa de Vries</h3>
@@ -219,7 +217,7 @@
         <div class="card-body p-4">
          <div class="d-flex align-items-center mb-3">
           <div class="ratio ratio-1x1 me-3" style="width: 60px;">
-           <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=60&amp;h=60" alt="Mark Hoekstra" class="rounded-circle" width="60" height="60" loading="lazy" style="object-fit: cover;">
+           <img src="img/vectorillustratie-van-peter-lynch.jpg" alt="Mark Hoekstra" class="rounded-circle" width="60" height="60" loading="lazy" style="object-fit: cover;">
           </div>
           <div>
            <h4 class="h5 mb-1">Mark Hoekstra</h4>
@@ -238,7 +236,7 @@
         <div class="card-body p-4">
          <div class="d-flex align-items-center mb-3">
           <div class="ratio ratio-1x1 me-3" style="width: 60px;">
-           <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=60&amp;h=60" alt="Sophie van Dam" class="rounded-circle" width="60" height="60" loading="lazy" style="object-fit: cover;">
+           <img src="img/1473.jpg" alt="Sophie van Dam" class="rounded-circle" width="60" height="60" loading="lazy" style="object-fit: cover;">
           </div>
           <div>
            <h4 class="h5 mb-1">Sophie van Dam</h4>
@@ -257,7 +255,7 @@
         <div class="card-body p-4">
          <div class="d-flex align-items-center mb-3">
           <div class="ratio ratio-1x1 me-3" style="width: 60px;">
-           <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=60&amp;h=60" alt="Thomas Bakker" class="rounded-circle" width="60" height="60" loading="lazy" style="object-fit: cover;">
+           <img src="img/52659.jpg" alt="Thomas Bakker" class="rounded-circle" width="60" height="60" loading="lazy" style="object-fit: cover;">
           </div>
           <div>
            <h4 class="h5 mb-1">Thomas Bakker</h4>
@@ -276,7 +274,7 @@
         <div class="card-body p-4">
          <div class="d-flex align-items-center mb-3">
           <div class="ratio ratio-1x1 me-3" style="width: 60px;">
-           <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=60&amp;h=60" alt="Emma Vermeer" class="rounded-circle" width="60" height="60" loading="lazy" style="object-fit: cover;">
+           <img src="img/133122.jpg" alt="Emma Vermeer" class="rounded-circle" width="60" height="60" loading="lazy" style="object-fit: cover;">
           </div>
           <div>
            <h4 class="h5 mb-1">Emma Vermeer</h4>
@@ -324,7 +322,7 @@
       <div class="c-logo mb-3">
        <div class="ratio ratio-21x9" style="width: var(--logo-w, 150px); height: var(--logo-h, 40px);">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 40" class="c-logo__img">
-         <rect width="150" height="40" rx="4" fill="var(--color-accent, #f59e0b)" /> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
+         <rect width="150" height="40" rx="4" fill="var(--color-accent, #f59e0b)"></rect> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
         </svg>
        </div>
       </div>
@@ -332,11 +330,11 @@
       <div class="d-flex gap-3">
        <a href="#" class="text-white" aria-label="Facebook"> 
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
-         <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+         <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
         </svg> 
        </a> <a href="#" class="text-white" aria-label="LinkedIn"> 
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
-         <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+         <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"></path>
         </svg> 
        </a>
       </div>
@@ -381,6 +379,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
