--- a/services.html
+++ b/services.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="nl">
- <head>
+<!DOCTYPE html><html lang="nl"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Onze Services - AutoExpert Nederland</title>
@@ -22,7 +20,7 @@
      <a class="navbar-brand c-logo" href="/"> 
       <div class="ratio ratio-21x9" style="width: var(--logo-w, 150px); height: var(--logo-h, 40px);">
        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 40" class="c-logo__img">
-        <rect width="150" height="40" rx="4" fill="var(--color-primary, #2563eb)" /> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
+        <rect width="150" height="40" rx="4" fill="var(--color-primary, #2563eb)"></rect> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
        </svg>
       </div> 
      </a>
@@ -62,13 +60,13 @@
       <div class="col-12 col-md-6 col-lg-4">
        <div class="c-card card h-100 d-flex flex-column">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1632823469171-d1a6b9ecc3e9?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=800&amp;h=450" alt="Auto onderhoud service, preventief onderhoud" class="img-fluid" loading="lazy" style="object-fit: cover;">
+         <img src="img/digital-composite-image-symbols-car-garage_1048944-15311684.jpg" alt="Auto onderhoud service, preventief onderhoud" class="img-fluid" loading="lazy" style="object-fit: cover;">
         </div>
         <div class="card-body d-flex flex-column">
          <div class="d-flex align-items-center mb-3">
           <div class="ratio" style="width: 48px; height: 48px;">
            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M12 6V4m0 2a2 2 0 1 0 4 2c0-1.11-.89-2-2-2h-2zm-1 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0zm9 1a9 9 0 1 1-18 0 9 9 0 0 1 18 0z" />
+            <path d="M12 6V4m0 2a2 2 0 1 0 4 2c0-1.11-.89-2-2-2h-2zm-1 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0zm9 1a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"></path>
            </svg>
           </div>
           <h3 class="h5 ms-3 mb-0">Preventief Onderhoud</h3>
@@ -83,13 +81,13 @@
       <div class="col-12 col-md-6 col-lg-4">
        <div class="c-card card h-100 d-flex flex-column">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1544636331-e26879cd4d9b?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=800&amp;h=450" alt="Motor reparatie service, auto reparatie" class="img-fluid" loading="lazy" style="object-fit: cover;">
+         <img src="img/low-section-man-cleaning-machine_1048944-4991955.jpg" alt="Motor reparatie service, auto reparatie" class="img-fluid" loading="lazy" style="object-fit: cover;">
         </div>
         <div class="card-body d-flex flex-column">
          <div class="d-flex align-items-center mb-3">
           <div class="ratio" style="width: 48px; height: 48px;">
            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z" />
+            <path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"></path>
            </svg>
           </div>
           <h3 class="h5 ms-3 mb-0">Reparaties &amp; Diagnostiek</h3>
@@ -104,13 +102,13 @@
       <div class="col-12 col-md-6 col-lg-4">
        <div class="c-card card h-100 d-flex flex-column">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1563694983011-6f4d90358083?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=800&amp;h=450" alt="APK keuring service, auto inspectie" class="img-fluid" loading="lazy" style="object-fit: cover;">
+         <img src="img/mechanic-preparing-check-list_1170-1310.jpg" alt="APK keuring service, auto inspectie" class="img-fluid" loading="lazy" style="object-fit: cover;">
         </div>
         <div class="card-body d-flex flex-column">
          <div class="d-flex align-items-center mb-3">
           <div class="ratio" style="width: 48px; height: 48px;">
            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+            <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
            </svg>
           </div>
           <h3 class="h5 ms-3 mb-0">APK Keuringen</h3>
@@ -125,13 +123,13 @@
       <div class="col-12 col-md-6 col-lg-4">
        <div class="c-card card h-100 d-flex flex-column">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1486754735734-325b5831c3ad?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=800&amp;h=450" alt="Banden service, velgen onderhoud" class="img-fluid" loading="lazy" style="object-fit: cover;">
+         <img src="img/replacing-car-tires_1426-22069.jpg" alt="Banden service, velgen onderhoud" class="img-fluid" loading="lazy" style="object-fit: cover;">
         </div>
         <div class="card-body d-flex flex-column">
          <div class="d-flex align-items-center mb-3">
           <div class="ratio" style="width: 48px; height: 48px;">
            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <circle cx="12" cy="12" r="10" /> <circle cx="12" cy="12" r="6" /> <circle cx="12" cy="12" r="2" />
+            <circle cx="12" cy="12" r="10"></circle> <circle cx="12" cy="12" r="6"></circle> <circle cx="12" cy="12" r="2"></circle>
            </svg>
           </div>
           <h3 class="h5 ms-3 mb-0">Banden &amp; Velgen</h3>
@@ -146,13 +144,13 @@
       <div class="col-12 col-md-6 col-lg-4">
        <div class="c-card card h-100 d-flex flex-column">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=800&amp;h=450" alt="Auto airconditioning service, klimaatbeheersing" class="img-fluid" loading="lazy" style="object-fit: cover;">
+         <img src="img/repairman-holding-monitor-tool-check-fixed-car-air-conditioner-system-technic.jpg" alt="Auto airconditioning service, klimaatbeheersing" class="img-fluid" loading="lazy" style="object-fit: cover;">
         </div>
         <div class="card-body d-flex flex-column">
          <div class="d-flex align-items-center mb-3">
           <div class="ratio" style="width: 48px; height: 48px;">
            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M8 2v4l-3 3H2v6h3l3 3v4h8V2H8zM23 9l-4 4-4-4" />
+            <path d="M8 2v4l-3 3H2v6h3l3 3v4h8V2H8zM23 9l-4 4-4-4"></path>
            </svg>
           </div>
           <h3 class="h5 ms-3 mb-0">Airconditioning Service</h3>
@@ -167,13 +165,13 @@
       <div class="col-12 col-md-6 col-lg-4">
        <div class="c-card card h-100 d-flex flex-column">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1619642751034-765dfdf7c58e?ixlib=rb-4.0.3&amp;auto=format&amp;fit=crop&amp;w=800&amp;h=450" alt="Auto elektronica service, software updates" class="img-fluid" loading="lazy" style="object-fit: cover;">
+         <img src="img/car-engine-scanning-with-wireless-technical-tool-obd2-scanner-tool-mechanic-h.jpg" alt="Auto elektronica service, software updates" class="img-fluid" loading="lazy" style="object-fit: cover;">
         </div>
         <div class="card-body d-flex flex-column">
          <div class="d-flex align-items-center mb-3">
           <div class="ratio" style="width: 48px; height: 48px;">
            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z" />
+            <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"></path>
            </svg>
           </div>
           <h3 class="h5 ms-3 mb-0">Elektronica &amp; Software</h3>
@@ -201,7 +199,7 @@
        <div class="text-center">
         <div class="ratio mx-auto mb-3" style="width: 64px; height: 64px;">
          <svg viewBox="0 0 24 24" fill="none" stroke="var(--color-primary)" stroke-width="2">
-          <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+          <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
          </svg>
         </div>
         <h3 class="h5 fw-bold">12 Maanden Garantie</h3>
@@ -212,7 +210,7 @@
        <div class="text-center">
         <div class="ratio mx-auto mb-3" style="width: 64px; height: 64px;">
          <svg viewBox="0 0 24 24" fill="none" stroke="var(--color-primary)" stroke-width="2">
-          <circle cx="12" cy="12" r="10" /> <polyline points="12,6 12,12 16,14" />
+          <circle cx="12" cy="12" r="10"></circle> <polyline points="12,6 12,12 16,14"></polyline>
          </svg>
         </div>
         <h3 class="h5 fw-bold">24/7 Pechservice</h3>
@@ -223,7 +221,7 @@
        <div class="text-center">
         <div class="ratio mx-auto mb-3" style="width: 64px; height: 64px;">
          <svg viewBox="0 0 24 24" fill="none" stroke="var(--color-primary)" stroke-width="2">
-          <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z" /> <polyline points="7.5,4.21 12,6.81 16.5,4.21" /> <polyline points="7.5,19.79 7.5,14.6 3,12" /> <polyline points="21,12 16.5,14.6 16.5,19.79" />
+          <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path> <polyline points="7.5,4.21 12,6.81 16.5,4.21"></polyline> <polyline points="7.5,19.79 7.5,14.6 3,12"></polyline> <polyline points="21,12 16.5,14.6 16.5,19.79"></polyline>
          </svg>
         </div>
         <h3 class="h5 fw-bold">Originele Onderdelen</h3>
@@ -234,7 +232,7 @@
        <div class="text-center">
         <div class="ratio mx-auto mb-3" style="width: 64px; height: 64px;">
          <svg viewBox="0 0 24 24" fill="none" stroke="var(--color-primary)" stroke-width="2">
-          <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" /> <circle cx="9" cy="7" r="4" /> <path d="M23 21v-2a4 4 0 0 0-3-3.87" /> <path d="M16 3.13a4 4 0 0 1 0 7.75" />
+          <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path> <circle cx="9" cy="7" r="4"></circle> <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path> <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
          </svg>
         </div>
         <h3 class="h5 fw-bold">Gecertificeerde Monteurs</h3>
@@ -314,23 +312,23 @@
         <h2 class="h2 fw-bold">Plan Uw Service Afspraak</h2>
         <p class="lead">Vul het formulier in en wij nemen binnen 24 uur contact met u op</p>
        </div>
-       <form class="c-form" id="serviceForm" novalidate>
+       <form class="c-form" id="serviceForm" novalidate="">
         <div class="row g-3">
          <div class="col-12 col-md-6">
           <div class="c-form__group">
-           <label for="firstName" class="c-form__label form-label">Voornaam *</label> <input type="text" class="c-form__input form-control" id="firstName" name="firstName" required>
+           <label for="firstName" class="c-form__label form-label">Voornaam *</label> <input type="text" class="c-form__input form-control" id="firstName" name="firstName" required="">
            <div class="c-form__error invalid-feedback">Vul uw voornaam in</div>
           </div>
          </div>
          <div class="col-12 col-md-6">
           <div class="c-form__group">
-           <label for="lastName" class="c-form__label form-label">Achternaam *</label> <input type="text" class="c-form__input form-control" id="lastName" name="lastName" required>
+           <label for="lastName" class="c-form__label form-label">Achternaam *</label> <input type="text" class="c-form__input form-control" id="lastName" name="lastName" required="">
            <div class="c-form__error invalid-feedback">Vul uw achternaam in</div>
           </div>
          </div>
          <div class="col-12 col-md-6">
           <div class="c-form__group">
-           <label for="email" class="c-form__label form-label">E-mailadres *</label> <input type="email" class="c-form__input form-control" id="email" name="email" required>
+           <label for="email" class="c-form__label form-label">E-mailadres *</label> <input type="email" class="c-form__input form-control" id="email" name="email" required="">
            <div class="c-form__error invalid-feedback">Vul een geldig e-mailadres in</div>
           </div>
          </div>
@@ -341,7 +339,7 @@
          </div>
          <div class="col-12">
           <div class="c-form__group">
-           <label for="serviceType" class="c-form__label form-label">Type Service *</label> <select class="c-form__input form-select" id="serviceType" name="serviceType" required> <option value="">Selecteer een service</option> <option value="onderhoud">Preventief Onderhoud</option> <option value="reparatie">Reparatie &amp; Diagnostiek</option> <option value="apk">APK Keuring</option> <option value="banden">Banden &amp; Velgen</option> <option value="airco">Airconditioning Service</option> <option value="elektronica">Elektronica &amp; Software</option> </select>
+           <label for="serviceType" class="c-form__label form-label">Type Service *</label> <select class="c-form__input form-select" id="serviceType" name="serviceType" required=""> <option value="">Selecteer een service</option> <option value="onderhoud">Preventief Onderhoud</option> <option value="reparatie">Reparatie &amp; Diagnostiek</option> <option value="apk">APK Keuring</option> <option value="banden">Banden &amp; Velgen</option> <option value="airco">Airconditioning Service</option> <option value="elektronica">Elektronica &amp; Software</option> </select>
            <div class="c-form__error invalid-feedback">Selecteer een servicetype</div>
           </div>
          </div>
@@ -352,7 +350,7 @@
          </div>
          <div class="col-12">
           <div class="c-form__checkbox form-check">
-           <input class="form-check-input" type="checkbox" id="privacy" name="privacy" required> <label class="form-check-label" for="privacy"> Ik ga akkoord met de <a href="privacy.html" class="text-primary">privacyverklaring</a> en geef toestemming voor het verwerken van mijn gegevens. * </label>
+           <input class="form-check-input" type="checkbox" id="privacy" name="privacy" required=""> <label class="form-check-label" for="privacy"> Ik ga akkoord met de <a href="privacy.html" class="text-primary">privacyverklaring</a> en geef toestemming voor het verwerken van mijn gegevens. * </label>
            <div class="c-form__error invalid-feedback">U moet akkoord gaan met de privacyverklaring</div>
           </div>
          </div>
@@ -373,7 +371,7 @@
       <div class="c-logo mb-3">
        <div class="ratio ratio-21x9" style="width: var(--logo-w, 150px); height: var(--logo-h, 40px);">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 40" class="c-logo__img">
-         <rect width="150" height="40" rx="4" fill="var(--color-accent, #f59e0b)" /> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
+         <rect width="150" height="40" rx="4" fill="var(--color-accent, #f59e0b)"></rect> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
         </svg>
        </div>
       </div>
@@ -381,11 +379,11 @@
       <div class="d-flex gap-3">
        <a href="#" class="text-white" aria-label="Facebook"> 
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
-         <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+         <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
         </svg> 
        </a> <a href="#" class="text-white" aria-label="LinkedIn"> 
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
-         <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+         <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"></path>
         </svg> 
        </a>
       </div>
@@ -430,6 +428,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
