--- a/thank_you.html
+++ b/thank_you.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="nl">
- <head>
+<!DOCTYPE html><html lang="nl"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -14,7 +12,7 @@
      <a class="navbar-brand c-logo" href="/"> 
       <div class="ratio ratio-21x9" style="width: var(--logo-w, 150px); height: var(--logo-h, 40px);">
        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 40" class="c-logo__img">
-        <rect width="150" height="40" rx="4" fill="var(--color-primary, #2563eb)" /> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
+        <rect width="150" height="40" rx="4" fill="var(--color-primary, #2563eb)"></rect> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
        </svg>
       </div> 
      </a>
@@ -46,7 +44,7 @@
    <section class="py-4 py-md-5 bg-light" data-aos="fade-up">
     <div class="container text-center">
      <div class="ratio ratio-16x9 mb-4" style="max-width:800px;margin:auto;">
-      <img src="https://images.unsplash.com/photo-1597764690523-15bea4c581c9?w=800&amp;h=450&amp;fit=crop" alt="Bedankt voor uw aanvraag bij AutoService Premium" class="img-fluid rounded" loading="lazy" width="800" height="450" style="object-fit:cover">
+      <img src="img/16940194.jpg" alt="Bedankt voor uw aanvraag bij AutoService Premium" class="img-fluid rounded" loading="lazy" width="800" height="450" style="object-fit:cover">
      </div>
      <h2 class="display-6 fw-bold mb-3">We staan klaar om uw auto in topconditie te houden</h2>
      <p class="lead text-muted mb-4">Onze experts nemen spoedig contact met u op voor de bevestiging van uw afspraak.</p>
@@ -61,7 +59,7 @@
       <div class="c-logo mb-3">
        <div class="ratio ratio-21x9" style="width: var(--logo-w, 150px); height: var(--logo-h, 40px);">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 40" class="c-logo__img">
-         <rect width="150" height="40" rx="4" fill="var(--color-accent, #f59e0b)" /> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
+         <rect width="150" height="40" rx="4" fill="var(--color-accent, #f59e0b)"></rect> <text x="75" y="25" text-anchor="middle" fill="white" font-family="Arial, sans-serif" font-size="14" font-weight="bold">AutoDrive</text>
         </svg>
        </div>
       </div>
@@ -69,11 +67,11 @@
       <div class="d-flex gap-3">
        <a href="#" class="text-white" aria-label="Facebook"> 
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
-         <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+         <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
         </svg> 
        </a> <a href="#" class="text-white" aria-label="LinkedIn"> 
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
-         <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+         <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"></path>
         </svg> 
        </a>
       </div>
@@ -118,6 +116,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
